--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-title: Your awesome title
+title: Diego's blog
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Diego Delmondes
+  email: diegodelmondes@protonmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Just a blog to share my opinions and ideas. 
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
@@ -13,11 +11,12 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
+  skin: dark
 
   # generate social links in footer
   social_links:
-    twitter: jekyllrb
-    github:  jekyll
+    twitter: diegodelmondes
+    github:  diegodelmondes
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
@@ -49,8 +48,9 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+ - about.md
+ - books.md
 
 # Build settings
 theme: minima
